--- a/html/block.html
+++ b/html/block.html
@@ -52,10 +52,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>The Language of Developer</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank"
-                            class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -64,10 +63,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>Getting tickets to the big show</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank"
-                            class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -76,10 +74,9 @@
                         <div class="text-secondary">Freelancer </div>
                         <div>The portfolio For Frelancer</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank"
-                            class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -88,10 +85,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>Getting tickets to the big show</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank"
-                            class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="bg-dark ">
