--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/bootstrap-5.2.3-dist/bootstrap-5.2.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./assets/images/portfolio-1.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
                             <a class="nav-link mx-2 nav" href="./html/block.html">Blocks</a>
                         </li>
                     </ul>
-                    <button class="btn btn-outline-secondary px-3 mx-lg-4 red " type="submit">Buy Now</button>
+                    <a class="btn btn-outline-secondary px-3 mx-lg-4 red " href="#" type="submit">Buy Now</a>
                 </div>
             </div>
         </nav>
@@ -52,8 +53,8 @@
                         <div class="text-secondary">development</div>
                         <div> Getting tickets to the big show</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.w3schools.com/whatis/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
+                    <div class="d-flex justify-content-center py-3">
+                       <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
                     </div>
                 </div>
             </div>
@@ -63,9 +64,9 @@
                         <div class="text-secondary">Html</div>
                         <div> Getting tickets to the big show</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.w3schools.com/whatis/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -74,9 +75,9 @@
                         <div class="text-secondary">Graphic</div>
                         <div> Getting tickets to the big show</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -85,9 +86,9 @@
                         <div class="text-secondary">Developer</div>
                         <div> The design is Thinking</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.w3schools.com/whatis/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -96,9 +97,9 @@
                         <div class="text-secondary">Freelancer </div>
                         <div>The portfolio For Frelancer</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -107,9 +108,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div> You can see your Portfolio</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -118,9 +119,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>The Language of Developer</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -129,9 +130,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>The new Thinking for Design</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -140,9 +141,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>The new Thinking for Design</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -151,9 +152,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>Getting tickets to the big show</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -162,9 +163,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>You can see your Portfolio</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank" class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
             <div class="col-12 col-lg-3 py-3">
@@ -173,9 +174,9 @@
                         <div class="text-secondary">Freelancer</div>
                         <div>Getting tickets to the big show</div>
                     </div>
-                    <div class="d-flex justify-content-center">
-                        <a href="https://www.freelancer.in/" target="_blank"class="btn btn-outline-danger mb-3 botton">READ MORE</a>
-                    </div>
+                    <div class="d-flex justify-content-center py-3">
+                        <a href="https://www.geeksforgeeks.org/how-to-become-a-software-developer/" target="_blank"> <button class="botton1"> Read More</button></a>
+                     </div>
                 </div>
             </div>
         </div>
